09-01-2013 -- 0.2.1
- prioritise repairing local-flaws than remote-flaws
- rename method "get_self_state" => "update_state" in resource.rb and all modules' ruby files

07-01-2013 -- 0.2.1
- new module: cloud (only handle HPCloud)
- create/delete Virtual Machine (VM)
- allow "parent" to be used in reference of constraint or mutation
- obligation to provide manifest file (main.mf) for non-abstract module
- any module without manifest file is an abstract module
  (it will not loaded by Nuri when aggregating current state)

02-01-2013 -- 0.2.0
- fix bugs in 'lib/nuri/sfp/sas.rb' -- in remove_not_constraint method
- enable multiple statements in conditional constraint
- allow administrator to check BSig status
- push trusted nodes from master to client
- restrict request only from trusted nodes in client
- allow client to expose its active BSig model

27-12-2012 -- 0.2.0 (beta1)
- fix bugs on BSig reminder -- send start BSig request through localhost
- provide HTTP PUT /bsig/start -- to accept request starting BSig executor
- fix partial-order workflow generator (use TO2PO algorithm in Ambite & Knoblock,
  Planning by Rewriting (2001) to replace Veloso et.al.'s algorithm(1990))
- provide new console command: console start-bsig
- fix bugs on repairing local-flaws: need to check post-conditions of every
  operator execution with the real current state
- bin/nuri.rb can be called from any directory

24-12-2012 -- 0.2.0 (beta)
- enable synchronous BSig execution (replacing the asynchronous version)
- redirect webrick logs (all levels) to "log/http.log"

23-12-2012
- enable BSig executor to send request to itself (localhost) for satisfying an operator's precondition
- fix bugs on start/stop nuri client

21-12-2012 -- 0.2.0 (alpha)
- enable distributed execution, but only tested on a system with 3 nodes

19-12-2012 -- 0.1.4
- from master node, sending BSig model to each client nodes
- on client node, saving the BSig model

18-12-2012 -- 0.1.3
- enable partial-order workflow